# moos-ivp-liumk

./: #CMakeLists.txt#  .gitignore  BHV_FooBar.cpp  BHV_FooBar.h  README.md
missions/alder/: alder.bhv  alder.moos++  alder_lab4.bhv  (+2 more)
missions/test/pEncircle/: CMakeLists.txt  Encircle.h  Encircle_Info.cpp  Encircle_Info.h  main.cpp
missions/test/pSpiralPath/: CMakeLists.txt  SpiralPath.cpp  SpiralPath_Info.cpp  SpiralPath_Info.h  pSpiralPath.moos
missions/test/pVehicleDataExchange/: CMakeLists.txt  VehicleDataExchange.cpp  VehicleDataExchange.h  VehicleDataExchange_Info.cpp  VehicleDataExchange_Info.h  main.cpp  pVehicleDataExchange.moos
src/: CMakeLists.txt
src/pCommunicationAngle_liumk/: #CommunicationAngle_liumk.h#  .#CommunicationAngle_liumk.h  .LastOpenedMOOSLogDirectory  AcousticPath.cpp  AcousticPath.h  AcousticPath.h~  CMakeLists.txt  CommCalcs.cpp  CommCalcs.h  CommunicationAngle_liumk.cpp  CommunicationAngle_liumk.cpp~  CommunicationAngle_liumk.h  CommunicationAngle_liumk.h~  CommunicationAngle_liumk_Info.cpp  CommunicationAngle_liumk_Info.h  Lab_6_MOOS_Community_Stub.sh  Lab_6_MOOS_Community_Stub.sh~  Test.cpp  foo.moos  foo.moos~  foo2.moos  main.cpp  pCommunicationAngle_liumk.moos  pCommunicationAngle_self_test.moos  test_communication.moos  test_communication.moos~
src/pCommunicationAngle_liumk/MOOSLog_28_2_2020_____21_58_24/: MOOSLog_28_2_2020_____21_58_24._moos  MOOSLog_28_2_2020_____21_58_24.alog  MOOSLog_28_2_2020_____21_58_24.ylog
src/pCommunicationAngle_liumk/MOOSLog_28_2_2020_____22_00_26/: MOOSLog_28_2_2020_____22_00_26._moos  MOOSLog_28_2_2020_____22_00_26.alog  MOOSLog_28_2_2020_____22_00_26.ylog
src/pCommunicationAngle_liumk/MOOSLog_28_2_2020_____22_03_11/: MOOSLog_28_2_2020_____22_03_11._moos  MOOSLog_28_2_2020_____22_03_11.alog  MOOSLog_28_2_2020_____22_03_11.ylog
src/pCommunicationAngle_liumk/MOOSLog_28_2_2020_____22_04_22/: MOOSLog_28_2_2020_____22_04_22._moos  MOOSLog_28_2_2020_____22_04_22.alog  MOOSLog_28_2_2020_____22_04_22.ylog
src/pCommunicationAngle_liumk/MOOSLog_28_2_2020_____22_16_08/: MOOSLog_28_2_2020_____22_16_08._moos  MOOSLog_28_2_2020_____22_16_08.alog  MOOSLog_28_2_2020_____22_16_08.ylog
src/pCommunicationAngle_liumk/MOOSLog_28_2_2020_____22_20_05/: MOOSLog_28_2_2020_____22_20_05._moos  MOOSLog_28_2_2020_____22_20_05.alog  MOOSLog_28_2_2020_____22_20_05.ylog
src/pCommunicationAngle_liumk/MOOSLog_28_2_2020_____22_22_43/: MOOSLog_28_2_2020_____22_22_43._moos  MOOSLog_28_2_2020_____22_22_43.alog  MOOSLog_28_2_2020_____22_22_43.ylog
src/pCommunicationAngle_liumk/MOOSLog_28_2_2020_____22_28_20/: MOOSLog_28_2_2020_____22_28_20._moos  MOOSLog_28_2_2020_____22_28_20.alog  MOOSLog_28_2_2020_____22_28_20.ylog
src/pDiscoverFrontAngle/: CMakeLists.txt  DiscoverFrontAngle.cpp  DiscoverFrontAngle.cpp~  DiscoverFrontAngle.h  DiscoverFrontAngle.h~  DiscoverFrontAngle_Info.cpp  DiscoverFrontAngle_Info.h  main.cpp  pDiscoverFrontAngle.moos
src/pPointAssign/: CMakeLists.txt  CMakeLists.txt~  PointAssign.cpp  PointAssign.cpp~  PointAssign.h  PointAssign.h~  PointAssign_Info.cpp  PointAssign_Info.h  main.cpp
(+553 files in other folders)
